2001-05-22  KATAYAMA Yoshio <kate@pfu.fujitsu.com>

	* its.el (its-delete-by-character): New customizable variable.
	(its-delete-backward-SYL): Delete a character as a unit even if
	just after input, if its-delete-by-character is non-NIL.

2001-04-16  KATAYAMA Yoshio <kate@pfu.co.jp>

	* egg.el (egg-setup-invisibility-spec): New function for setup
	buffer-invisibilty-spec.

	* its.el (its-setup-fence-mode): Change the value of invisible
	property to egg.

	* egg-cnv.el (egg-convert-region): Change the value of invisible
	property to egg.

        * jisx0213.el: Correct JIS X 0213 definition. (suggested by
        T. Kawabata)

2000-06-02  KATAYAMA Yoshio <kate@pfu.co.jp>

	* egg/wnn.el (wnn): Fix docstring.
	(wnn-backend-plist): Include egg-special-candidate.
	(wnn-special-candidate): New function.
	(wnn-pinyin-zhuyin-bunsetsu, wnn-pinyin-zhuyin-string): New
	functions.
	(egg-activate-wnn): Fix docstring.

	* egg/sj3.el (sj3, egg-activate-sj3): Fix docstring.

	* egg/canna.el (egg-activate-canna): Fix docstring.

	* menudiag.el: Mostly rewritten.

	* leim-list.el: Docstrings for autoload fixed.

	* its.el (its): Fix docstring.
	(its-mode-map): Fix bindings.
	(its-fence-mode, egg-sub-mode-map-alist): New variables.
	(its-enter/leave-fence): New function.
	(its-put-cursor): Add text properties point-entered, point-left,
	modification-hooks.
	(its-in-fence-p): Check also read-only property.
	(its-hiragana, its-katakana): Just call its-convert.
	(its-hankaku, its-japanese-hankaku): These functions deleted.
	(its-full-half-table, its-half-full-table): New variables.
	Initialize them.
	(its-half-width, its-full-width): New functions.
	(its-convert): Args changed.

	* its-keydef.el (its-make-select-func): Add check by
	(egg-conversion-fence-p).

	* egg.el (egg): Fix docstring.
	(egg-current-keymap): This variable deleted.
	(egg-mode-map-alist, egg-sub-mode-map-alist): New variables.
	(define-egg-mode-map): New macro.
	(modefull, modeless): New egg mode maps.